# SchemaFlow

./: .agents.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: config.local.yaml.example  config.py  config.yaml  dependencies.py  main.py  pyproject.toml  requirements.txt  settings.toml  setup.sh  start.sh  test_ai_intervention.py  test_backend.py
backend/api/: actions.py  ai_generate.py  auth.py  exceptions.py  execution.py  response.py  trigger.py  websocket.py  workflows.py
backend/config/: __init__.py  ai_config.yaml  ai_models.py  loader.py
backend/data/browser_states/: workflow_wf_b26620ac_state.json
backend/data/workflows/: index.json  wf_b26620ac.json  wf_bd7a5d91.json
backend/engine/: __init__.py  ai_client.py  ai_intervention_detector.py  ai_locator.py  ai_target_locator.py  auth_detector.py  browser_manager.py  constants.py  context.py  exceptions.py  execution_recorder.py  executor.py
backend/engine/actions/: __init__.py  ai.py  base.py  browser.py  control.py  data.py  registry.py  utils.py
backend/engine/ai/: __init__.py  client.py  intervention.py  locator.py
backend/persistence/: __init__.py  base.py  file_storage.py  json_store.py
backend/repository/: __init__.py  base.py  json_repository.py
backend/storage/: __init__.py  base.py  file_storage.py
backend/tests/: __init__.py  conftest.py  test_ai_intervention.py  test_ai_locator.py  test_ai_locator_fix.py  test_backend.py  test_trigger_api.py
backend/utils/: __init__.py  log_manager.py
docs/: F2_AI_LOCATOR_FIX_REPORT.md  TODO.md
frontend/: TESTING.md  (+5 more)
(+103 files in other folders)
