[project]
name = "schemaflow-backend"
version = "0.5.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "websockets==12.0",
    "playwright==1.58.0",
    "openai==1.10.0",
    "httpx==0.27.0",
    "pydantic==2.5.0",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.0",
    "tomli==2.0.1",
    "pyyaml==6.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []
