[project]
name = "schemaflow-backend"
version = "0.5.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "playwright>=1.58.0",
    "openai>=1.10.0",
    "httpx>=0.27.2",
    "pydantic>=2.10.4",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.1",
    "tomli>=2.0.1",
    "pyyaml>=6.0.1",
    "browser-use>=0.1.40",
    "langchain>=0.3.18",
    "langchain-core>=0.3.35",
    "langchain-openai>=0.3.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
